# libminesweeper

./: .gitignore  Makefile  README.md  configure.ac  configure.pl  main.cpp  main.tds  minesweeper.h
minesweeper/: Makefile  solver.h
minesweeper/core/: Makefile  cell.cpp  cell.h  common.h  field.cpp  field.h
minesweeper/generator/: common.h  generator-cell.h  generator-field.cpp  generator-field.h  record-state.h  swapper.cpp  swapper.h
minesweeper/solver/: Makefile  bipartite.h  combination.cpp  combination.h  common.h  result.h  searcher.cpp  searcher.h  solver-cell.cpp  solver-cell.h  solver-field.cpp  solver-field.h  suspect.cpp  suspect.h
src/: Makefile.am  main.cpp
src/minesweeper/: core-cell.cpp  core-cell.h  core-field.cpp  core-field.h  core.h  generator-cell.h  generator-field.cpp  generator-field.h  generator-record.h  generator-swapper.cpp  generator-swapper.h  generator.h  solver-bipartite.h  solver-cell.cpp  solver-cell.h  solver-combination.h  solver-field.cpp  solver-field.h  solver-result.h  solver-searcher.cpp  solver-searcher.h  solver-suspect.cpp  solver-suspect.h  solver.h
src/minesweeper/core/: cell.h  common.h  field.cpp  field.h
src/minesweeper/generator/: common.h  generator-cell.h  generator-field.h  record-state.h
src/minesweeper/solver/: bipartite.h  combination.h  searcher.h
tests/: Makefile  Makefile.am  combination-test.cpp  combination-test.h  core-test.cpp  core-test.h  generator-test.cpp  generator-test.h  main.cpp  solver-test.cpp  solver-test.h  test.cpp  test.h
