AC_INIT([minesweeper], [0.1], [ma514y@gmail.com], [minesweeper], [https://github.com/mahiro])
AC_PREREQ([2.68])
AM_INIT_AUTOMAKE([foreign subdir-objects no-dependencies -Wall -Werror])
AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile])
AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_OUTPUT
