AC_INIT([minesweeper], [0.1], [ma514y@gmail.com], [minesweeper], [https://github.com/mahiro])
AC_PREREQ([2.68])
AM_INIT_AUTOMAKE([foreign subdir-objects -Wall -Werror])
AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile])
AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADERS([config.h])
AM_PROG_AR
AC_PROG_CXX
AC_ENABLE_SHARED
AC_DISABLE_STATIC
AC_PROG_LIBTOOL
LT_INIT
AC_CONFIG_MACRO_DIRS([m4])
AC_OUTPUT
