bin_PROGRAMS = minefield

minefield_SOURCES = main.cpp \
minesweeper.h \
minesweeper/core.h \
minesweeper/core/cell.cpp \
minesweeper/core/cell.h \
minesweeper/core/common.h \
minesweeper/core/field.cpp \
minesweeper/core/field.h \
minesweeper/solver.h \
minesweeper/solver/bipartite.h \
minesweeper/solver/combination.h \
minesweeper/solver/common.h \
minesweeper/solver/result.h \
minesweeper/solver/searcher.cpp \
minesweeper/solver/searcher.h \
minesweeper/solver/solver-cell.cpp \
minesweeper/solver/solver-cell.h \
minesweeper/solver/solver-field.cpp \
minesweeper/solver/solver-field.h \
minesweeper/solver/suspect.cpp \
minesweeper/solver/suspect.h \
minesweeper/generator.h \
minesweeper/generator/common.h \
minesweeper/generator/generator-cell.h \
minesweeper/generator/generator-field.cpp \
minesweeper/generator/generator-field.h \
minesweeper/generator/record-state.h \
minesweeper/generator/swapper.cpp \
minesweeper/generator/swapper.h
