TESTS = minesweeper-tests
check_PROGRAMS = minesweeper-tests
noinst_PROGRAMS = minesweeper-tests

minesweeper_tests_SOURCES = main.cpp \
test.cpp \
test.h \
combination-test.cpp \
combination-test.h \
core-test.cpp \
core-test.h \
generator-test.cpp \
generator-test.h \
solver-test.cpp \
solver-test.h \
../src/minesweeper.h \
../src/minesweeper/core.h \
../src/minesweeper/core/cell.cpp \
../src/minesweeper/core/cell.h \
../src/minesweeper/core/common.h \
../src/minesweeper/core/field.cpp \
../src/minesweeper/core/field.h \
../src/minesweeper/solver.h \
../src/minesweeper/solver/bipartite.h \
../src/minesweeper/solver/combination.h \
../src/minesweeper/solver/common.h \
../src/minesweeper/solver/result.h \
../src/minesweeper/solver/searcher.cpp \
../src/minesweeper/solver/searcher.h \
../src/minesweeper/solver/solver-cell.cpp \
../src/minesweeper/solver/solver-cell.h \
../src/minesweeper/solver/solver-field.cpp \
../src/minesweeper/solver/solver-field.h \
../src/minesweeper/solver/suspect.cpp \
../src/minesweeper/solver/suspect.h \
../src/minesweeper/generator.h \
../src/minesweeper/generator/common.h \
../src/minesweeper/generator/generator-cell.h \
../src/minesweeper/generator/generator-field.cpp \
../src/minesweeper/generator/generator-field.h \
../src/minesweeper/generator/record-state.h \
../src/minesweeper/generator/swapper.cpp \
../src/minesweeper/generator/swapper.h
