TESTS = minesweeper-tests
check_PROGRAMS = minesweeper-tests
noinst_PROGRAMS = minesweeper-tests

minesweeper_tests_SOURCES = main.cpp \
test.cpp \
combination-test.cpp \
core-test.cpp \
generator-test.cpp \
solver-test.cpp \
../src/minesweeper/core-cell.cpp \
../src/minesweeper/core-field.cpp \
../src/minesweeper/solver-searcher.cpp \
../src/minesweeper/solver-cell.cpp \
../src/minesweeper/solver-field.cpp \
../src/minesweeper/solver-suspect.cpp \
../src/minesweeper/generator-field.cpp \
../src/minesweeper/generator-swapper.cpp
